--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Sally Akuffo</title>
+		<!-- Link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+			
 	</head>
 	<body>
 		<nav>
