--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Sally Akuffo</title>
-		<!-- Link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-			
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Sally Akuffo, Data Scientist</h1>
-				<p>I'm a student at the <em>University of New Hampshire.</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:sa1236@wildcats.unh.edu">email</a></li>
-        		<li><a href="https://github.com/sallyakuffo">github.com/sallyakuffo</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Sally Akuffo
+---
+<div class="blurb">
+        <h1>Sally Akuffo, Data Scientist</h1>
+	<p>I'm a student at the <em>University of New Hampshire.</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
+</div><!-- /.blurb -->
